--- a/Entrega2/Entrega2.ipynb
+++ b/Entrega2/Entrega2.ipynb
@@ -2191,7 +2191,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc9c97d34a8>"
+       "<matplotlib.legend.Legend at 0x7fbd3faee748>"
       ]
      },
      "execution_count": 38,
@@ -2446,7 +2446,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc9c9948cf8>"
+       "<matplotlib.legend.Legend at 0x7fbd3f7f04e0>"
       ]
      },
      "execution_count": 43,
@@ -2904,7 +2904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2951,7 +2951,7 @@
        "Text(0.5, 1.0, 'Boxplot das vendas (sem picos)')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2968,13 +2968,13 @@
    ],
    "source": [
     "# Retirando ate o setimo pico do vetor com as lojas \n",
-    "Avg_Date_R = RetiraPicoAlto(Avg_Date, 9)\n",
+    "Avg_Date_r = RetiraPicoAlto(Avg_Date, 9)\n",
     "\n",
     "# Retirando ate o segundo pico  do vetor com as lojas     \n",
-    "Avg_Date_R = RetiraPicoBaixo(Avg_Date_R, 5)\n",
+    "Avg_Date_r = RetiraPicoBaixo(Avg_Date_r, 5)\n",
     "\n",
     "sns.set(style=\"whitegrid\")\n",
-    "plot = sns.boxplot(x=Avg_Date_R[\"Weekly_Sales\"])\n",
+    "plot = sns.boxplot(x=Avg_Date_r[\"Weekly_Sales\"])\n",
     "plt.title('Boxplot das vendas (sem picos)')"
    ]
   },
